完成employees网络部分，并将weatherdata本地化

--- a/Covid.Server/Properties/launchSettings.json
+++ b/Covid.Server/Properties/launchSettings.json
@@ -2,6 +2,8 @@
   "profiles": {
     "Covid.Server": {
       "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "api/department/1/employee",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
