完成CRUD Edit表单，准备做存储

--- a/Covid.Server/Properties/launchSettings.json
+++ b/Covid.Server/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Covid.Server": {
       "commandName": "Project",
       "launchBrowser": true,
-      
+      "launchUrl": "api/department",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
